# RRTE

./: .gitignore  Cargo.toml  README.md  SUMMARY.md
crates/rrte-api/: Cargo.toml
crates/rrte-api/src/: lib.rs
crates/rrte-assets/: Cargo.toml
crates/rrte-assets/src/: asset.rs  handle.rs  lib.rs  loader.rs  manager.rs
crates/rrte-core/: Cargo.toml
crates/rrte-core/src/: camera.rs  engine.rs  events.rs  input.rs  lib.rs  scene.rs  time.rs
crates/rrte-ecs/: Cargo.toml
crates/rrte-ecs/src/: component.rs  entity.rs  lib.rs  query.rs  system.rs  world.rs
crates/rrte-math/: Cargo.toml
crates/rrte-math/src/: bounds.rs  color.rs  lib.rs  matrix.rs  ray.rs  transform.rs  vector.rs
crates/rrte-plugin/: Cargo.toml
crates/rrte-plugin/src/: lib.rs  loader.rs  manifest.rs  plugin.rs  registry.rs
crates/rrte-renderer/: Cargo.toml
crates/rrte-renderer/src/: camera.rs  gpu_renderer.rs  lib.rs  light.rs  material.rs  primitives.rs  raytracer.rs  scene.rs
crates/rrte-renderer/src/shaders/: blit.wgsl
crates/rrte-scene/: Cargo.toml
crates/rrte-scene/src/: lib.rs
examples/: README.md
examples/advanced-demo/: Cargo.toml
examples/advanced-demo/src/: main.rs
examples/basic-demo/: Cargo.toml
examples/basic-demo/src/: main.rs
examples/sdf-showcase/: Cargo.toml
examples/sdf-showcase/src/: main.rs
examples/simple-demo/: Cargo.toml
examples/simple-demo/src/: main.rs
src/: advanced_demo.rs  lib.rs  main.rs
