[workspace]
members = [
    "crates/rrte-core",
    "crates/rrte-math",
    "crates/rrte-renderer",
    "crates/rrte-ecs",
    "crates/rrte-assets",
    "crates/rrte-plugin",
    "crates/rrte-api",
    "examples/basic-demo",
    "examples/advanced-demo",
    "examples/sdf-showcase",
    "examples/simple-demo",
    "crates/rrte-scene",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn" # Consider changing to "deny" for releases
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

[workspace.dependencies]
# Math and linear algebra
glam = { version = "0.24", features = ["serde"] }
nalgebra = "0.32"

# Graphics and windowing
winit = "0.29.15"
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }
raw-window-handle = "0.6.2"

# Image processing
image = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Plugin system
libloading = "0.8"

# Configuration
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.10"

# Performance
rayon = "1.8"

[package]
name = "rrte-engine"
version = "0.1.0"
edition = "2021"
authors = ["RRTE Engine Team"]
description = "A modular 3D raytracing-based game engine"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "raytracing", "3d", "engine", "graphics"]
categories = ["game-development", "graphics", "rendering"]

# This is now a library-only crate
[lib]
name = "rrte_engine"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
log = "0.4"
rrte-api = { path = "crates/rrte-api" }
rrte-core = { path = "crates/rrte-core" }
rrte-math = { path = "crates/rrte-math" }
rrte-renderer = { path = "crates/rrte-renderer" }
rrte-scene = { path = "crates/rrte-scene" }
rrte-ecs = { path = "crates/rrte-ecs" }
rrte-assets = { path = "crates/rrte-assets" }
rrte-plugin = { path = "crates/rrte-plugin" }

# Core engine dependencies (no windowing here - that's for applications)
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wgpu = { version = "0.19" }
