[package]
name = "rrte-assets"
version = "0.1.0"
edition = "2021"
description = "Asset management for RRTE engine"

[dependencies]
rrte-math = { path = "../rrte-math" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
image.workspace = true
tokio.workspace = true
