[package]
name = "rrte-renderer"
version = "0.1.0"
edition = "2021"
description = "Raytracing renderer for RRTE engine"

[dependencies]
rrte-math = { path = "../rrte-math" }
rrte-ecs = { path = "../rrte-ecs" }
# rrte-scene = { path = "../rrte-scene" } # Removed to break cyclic dependency
wgpu = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
bytemuck = { version = "1.15.0", features = ["derive"] }
rayon = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
rand = "0.8"
image = { workspace = true }
winit = { workspace = true }

[lints]
workspace = true
